fixing buttons gap

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -298,7 +298,7 @@ span{
   display: flex;
   flex-direction: row;
   align-items: center;
-  gap: 24px;
+  gap: 10px;
   width: 688px;
   height: 67px;
   position: fixed;
